tests/bad/vec_literal_shorthand_inconsistent_type.oc
/// fail: Expected type u32, but got str

def main() {
    let x = $[1, "hello"]
}